refactor: 메모리 사용이 더 적은List.of()로 변경함