@@ -3,7 +3,6 @@ package race.domian;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -13,6 +12,6 @@ class CarsTest {
     void 우승자_찾기() {
         Cars cars = new Cars(List.of("a","b","c"));
         cars.move(() -> true);
-        assertThat(cars.findWinners()).isEqualTo(new ArrayList<>(Arrays.asList("a","b","c")));
+        assertThat(cars.findWinners()).isEqualTo(new ArrayList<>(List.of("a","b","c")));
     }
 }
